# melfa_robot

./: ws_moveit
melfa_description/urdf/: .rv7fr-dh-floor-gazebo2.urdf.swp  .rv7fr-dh-floor.urdf.swp  .rv7fr-dh-zero-table.urdf.swp  .rv7fr-dh-zero-table.urdf.xacro.swp  .rv7fr.urdf.xacro.swp  rv7fl.urdf  rv7fr-dh-floor-gazebo.urdf  rv7fr-dh-floor-gazebo.urdf.xacro  rv7fr-dh-floor-gazebo2.urdf  rv7fr-dh-floor-no-world.urdf.xacro  rv7fr-dh-floor.urdf  rv7fr-dh-floor.urdf.xacro  rv7fr-dh-zero-floor.urdf.xacro  rv7fr-dh-zero-table-sensor.urdf  rv7fr-dh-zero-table.urdf  rv7fr-dh-zero-table.urdf.xacro  rv7fr-dh-zero.urdf.xacro  rv7fr-dh.urdf.xacro  rv7fr-floor.urdf.xacro  rv7fr.urdf.xacro  (+1 more)
melfa_robot/: .CMakeLists.txt.swp
rv7fl_path_planner_moveit/: CMakeLists.txt  package.xml
rv7fr_dh_floor/: .setup_assistant  CMakeLists.txt  package.xml
rv7fr_dh_floor/config/: .chomp_planning.yaml.swp  .kinematics.yaml.swp  .ros_controllers.yaml.swp  .ros_controllers_gazebo.yaml.swo  .stomp_planning.yaml.swp  chomp_planning.yaml  joint_limits.yaml  ros_controllers.yaml  ros_controllers_gazebo.yaml  rv7fr.srdf  sensors_kinect_depthmap.yaml  stomp_planning.yaml
rv7fr_dh_floor/launch/: .demo.launch.swp  .planning_context.launch.swp  .stomp-chomp_planning_pipeline.launch.xml.swp  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  demo_gazebo2.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  gazebo2.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl-chomp_planning_pipeline.launch.xml  ompl-stomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  ros_controllers_gazebo.launch  run_benchmark_ompl.launch  rv7fr_moveit_controller_manager.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  stomp-chomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse.launch
rv7fr_dh_floor/rviz/: moveit.rviz
rv7fr_dh_floor_gazebo/: .setup_assistant  CMakeLists.txt  _rv7fr_rosparam_list.txt  package.xml
rv7fr_dh_floor_no_world/: .setup_assistant  CMakeLists.txt  package.xml
rv7fr_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rv7fr_planners_interface/: CMakeLists.txt  package.xml
rv7fr_planners_interface/include/rv7fr_planners_interface/: pose_marker_class.h
rv7fr_planners_interface/launch/: obstacle_avoidance.launch
rv7fr_planners_interface/src/: move_group_interface.cpp  obstacle.cpp  obstacle_avoidance.cpp  obstacle_avoidance_constrained.cpp  planning_scene.cpp  pose_marker.cpp  pose_marker_class.cpp  robot_state_model.cpp  simple_move_group.cpp  test_class.cpp  testing_msgs.cpp
rv7fr_table_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+176 files in other folders)
